fix: remove old contact modal link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="bottom">
                         <h4 class="white heading small-heading no-margin regular">Skorzystaj z</h4>
                         <h4 class="white heading small-pt">Profesjonalnego doradztwa</h4>
-                        <a href="#" data-toggle="modal" data-target="#modal1"
+                        <a href="#" data-toggle="modal"
                            class="btn btn-white-fill expand">Kontakt</a>
                     </div>
                 </div>
