--- a/index.html
+++ b/index.html
@@ -101,12 +101,6 @@
                                 wdrożeniami rozwiązań web i mobile. Naszym celem jest dostarczenie najwyższej
                                 jakości rozwiązań w konkurencyjnych cenach.</p>
                         </div>
-                        <div class="item">
-                            <h5 class="white small-heading">Zespół</h5>
-                            <p class="white heading content light">Code Plot składa się z zespołu programistów,
-                                grafika i copywritera. Każdy z nas ma na swoim koncie dziesiątki zrealizowanych
-                                projektów i lata doświadczenia.</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -123,20 +117,11 @@
             </div>
             <div class="col-md-4">
                 <div class="intro-table intro-table-third">
-                    <h5 class="white heading">Zadowoleni klienci</h5>
-                    <div class="owl-testimonials bottom">
-                        <div class="item">
-                            <h4 class="white heading content">I couldn't be more happy with the results!</h4>
-                            <h5 class="white heading light author">Adam Jordan</h5>
-                        </div>
-                        <div class="item">
-                            <h4 class="white heading content">I can't believe how much better I feel!</h4>
-                            <h5 class="white heading light author">Greg Pardon</h5>
-                        </div>
-                        <div class="item">
-                            <h4 class="white heading content">Incredible transformation and I feel so healthy!</h4>
-                            <h5 class="white heading light author">Christina Goldman</h5>
-                        </div>
+                    <h5 class="white heading">Zespół</h5>
+                    <div class="bottom">
+                        <p class="white heading content light">Code Plot składa się z zespołu programistów,
+                            grafika i copywritera. Każdy z nas ma na swoim koncie dziesiątki zrealizowanych
+                            projektów i lata doświadczenia.</p>
                     </div>
                 </div>
             </div>
