fix: update index.html content for improved clarity and branding

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code Plot - kreujemy cyfrową rzeczywistość</title>
+    <title>Code Plot - Profesjonalne rozwiązania cyfrowe</title>
     <meta name="description"
-          content="CodePlot zajmuje się projektowaniem i tworzeniem stron internetowych oraz aplikacji mobilnych. Nasza firma w Warszawie prowadzi również szkolenia."/>
-    <meta name="keywords" content="strony www, tworzenie stron, web, aplikacje, mobile, doradztwo"/>
+          content="Code Plot to profesjonalna agencja digital specjalizująca się w projektowaniu i tworzeniu nowoczesnych stron internetowych oraz aplikacji mobilnych. Oferujemy kompleksowe rozwiązania technologiczne oraz eksperckie szkolenia."/>
+    <meta name="keywords" content="strony internetowe, aplikacje mobilne, e-commerce, projektowanie stron, rozwój aplikacji, technologie webowe, doradztwo IT, szkolenia technologiczne"/>
     <meta name="author" content="Piotr Żurek"/>
 
     <link rel="apple-touch-icon" sizes="57x57"
@@ -60,9 +60,8 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right main-nav">
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#services">Usługi</a></li>
-
+                <li><a href="#intro">Strona główna</a></li>
+                <li><a href="#services">Nasze usługi</a></li>
                 <li><a href="#oferta">Oferta</a></li>
             </ul>
         </div>
@@ -78,8 +77,8 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <img src="/img/logo_big.png" alt="Code Plot - Strony www" id="logo" class="">
-                        <h3 class="light white">Web - Mobile - E-commerce - Szkolenia</h3>
-                        <h1 class="white typed">Kreujemy cyfrową rzeczywistość.</h1>
+                        <h3 class="light white">Technologie webowe | Aplikacje mobilne | E-commerce | Ekspertyza IT</h3>
+                        <h1 class="white typed">Transformujemy cyfrową rzeczywistość.</h1>
                         <span class="typed-cursor">|</span>
                     </div>
                 </div>
@@ -93,25 +92,25 @@
         <div class="row intro-tables">
             <div class="col-md-4">
                 <div class="intro-table intro-table-first">
-                    <h5 class="white heading">Na skróty</h5>
+                    <h5 class="white heading">W skrócie</h5>
                     <div class="owl-carousel owl-schedule bottom">
                         <div class="item">
                             <h5 class="white small-heading">O nas</h5>
-                            <p class="white heading content light">Code Plot to zespół specjalistów zajmująch się
-                                wdrożeniami rozwiązań web i mobile. Naszym celem jest dostarczenie najwyższej
-                                jakości rozwiązań w konkurencyjnych cenach.</p>
+                            <p class="white heading content light">Code Plot to innowacyjny zespół ekspertów 
+                                specjalizujący się w tworzeniu zaawansowanych rozwiązań cyfrowych. Dostarczamy 
+                                najwyższej jakości produkty technologiczne, łącząc kreatywność z profesjonalizmem.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="intro-table intro-table-hover">
-                    <h5 class="white heading hide-hover">Kontakt z ekspertem</h5>
+                    <h5 class="white heading hide-hover">Konsultacja ekspercka</h5>
                     <div class="bottom">
-                        <h4 class="white heading small-heading no-margin regular">Skorzystaj z</h4>
-                        <h4 class="white heading small-pt">Profesjonalnego doradztwa</h4>
+                        <h4 class="white heading small-heading no-margin regular">Zaplanuj</h4>
+                        <h4 class="white heading small-pt">Indywidualną konsultację</h4>
                         <a href="#" data-toggle="modal"
-                           class="btn btn-white-fill expand">Kontakt</a>
+                           class="btn btn-white-fill expand">Umów spotkanie</a>
                     </div>
                 </div>
             </div>
@@ -119,9 +118,9 @@
                 <div class="intro-table intro-table-third">
                     <h5 class="white heading">Zespół</h5>
                     <div class="bottom">
-                        <p class="white heading content light">Code Plot składa się z zespołu programistów,
-                            grafika i copywritera. Każdy z nas ma na swoim koncie dziesiątki zrealizowanych
-                            projektów i lata doświadczenia.</p>
+                        <p class="white heading content light">Nasz zespół to starannie dobrani specjaliści: 
+                            doświadczeni programiści, kreatywni projektanci UX/UI oraz strategiczni content managerowie. 
+                            Łączymy wiedzę techniczną z biznesową, aby tworzyć rozwiązania, które przynoszą realne rezultaty.</p>
                     </div>
                 </div>
             </div>
@@ -142,8 +141,8 @@
                              class="icon">
                     </div>
                     <h4 class="heading">Aplikacje webowe</h4>
-                    <p class="description">Wykonujemy kompleksowe wdrożenia stron www, platform e-commerce i
-                        aplikacji WEB</p>
+                    <p class="description">Tworzymy zaawansowane strony internetowe, platformy e-commerce i aplikacje webowe 
+                        z wykorzystaniem najnowszych technologii i zgodnie z aktualnymi trendami</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -152,8 +151,9 @@
                         <img src="/img/icons/guru-blue.png" alt=""
                              class="icon">
                     </div>
-                    <h4 class="heading">Rozwiązania mobile</h4>
-                    <p class="description">Aplikacje mobilne dla systemów Android i iOS oraz aplikacje hybrydowe</p>
+                    <h4 class="heading">Rozwiązania mobilne</h4>
+                    <p class="description">Projektujemy i wdrażamy natywne aplikacje dla systemów Android i iOS oraz wydajne 
+                        rozwiązania hybrydowe dostosowane do potrzeb Twojego biznesu</p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -163,7 +163,8 @@
                              class="icon">
                     </div>
                     <h4 class="heading">Szkolenia i doradztwo</h4>
-                    <p class="description">Udzielamy szkoleń i doradzamy w zakresie technologii</p>
+                    <p class="description">Oferujemy profesjonalne szkolenia technologiczne oraz strategiczne doradztwo IT, 
+                        pomagając firmom w cyfrowej transformacji i optymalizacji procesów biznesowych</p>
                 </div>
             </div>
         </div>
@@ -181,33 +182,33 @@
             <div class="col-md-6 no-padding pricings text-center">
                 <div class="pricing pricing--blue">
                     <div class="box-main active" data-img="img/pricing1.jpg">
-                        <h4 class="white">Strony WWW</h4>
-                        <p class="white regular light">Nowoczesne i responsywne strony www</p>
+                        <h4 class="white">Strony internetowe</h4>
+                        <p class="white regular light">Nowoczesne, responsywne i zoptymalizowane strony z intuicyjnym interfejsem</p>
                         <i class="info-icon icon_question"></i>
                     </div>
                     <div class="box-second active">
                         <ul class="white-list text-left">
-                            <li>Strony firmowe</li>
-                            <li>Blogi</li>
-                            <li>Portale</li>
-                            <li>Landing page</li>
-                            <li>Newslettery</li>
+                            <li>Responsywne strony korporacyjne</li>
+                            <li>Profesjonalne blogi i platformy contentowe</li>
+                            <li>Zaawansowane portale informacyjne</li>
+                            <li>Konwersyjne landing page</li>
+                            <li>Efektywne systemy newsletterowe</li>
                         </ul>
                     </div>
                 </div>
                 <div class="pricing pricing--red">
                     <div class="box-main" data-img="img/pricing2.jpg">
                         <h4 class="white">E-commerce</h4>
-                        <p class="white regular light">Zacznij sprzedawać w sieci</p>
+                        <p class="white regular light">Profesjonalne platformy sprzedażowe zwiększające konwersję i zyski</p>
                         <i class="info-icon icon_question"></i>
                     </div>
                     <div class="box-second">
                         <ul class="white-list text-left">
-                            <li>Sklepy internetowe</li>
-                            <li>Platformy sprzedażowe</li>
-                            <li>Moduły e-commerce</li>
-                            <li>Integracje</li>
-                            <li>Moduły wymiany danych</li>
+                            <li>Zaawansowane sklepy internetowe</li>
+                            <li>Wielokanałowe platformy sprzedażowe</li>
+                            <li>Dedykowane moduły e-commerce</li>
+                            <li>Integracje z systemami płatności i ERP</li>
+                            <li>Automatyczne systemy wymiany danych</li>
                         </ul>
                     </div>
                 </div>
@@ -216,30 +217,32 @@
                 <div class="pricing pricing--green">
                     <div class="box-main" data-img="img/pricing3.jpg">
                         <h4 class="white">Aplikacje mobilne</h4>
-                        <p class="white regular light">Aplikacje mobilne szyte na miarę</p>
+                        <p class="white regular light">Indywidualnie projektowane aplikacje mobilne dopasowane do strategii biznesowej</p>
                         <i class="info-icon icon_question"></i>
                     </div>
                     <div class="box-second">
                         <ul class="white-list text-left">
-                            <li>Android</li>
-                            <li>iOS</li>
-                            <li>Aplikacje hybrydowe</li>
-                            <li>Warstwa serwerowa</li>
+                            <li>Natywne aplikacje Android</li>
+                            <li>Natywne aplikacje iOS</li>
+                            <li>Wydajne aplikacje hybrydowe</li>
+                            <li>Zaawansowana infrastruktura serwerowa</li>
+                            <li>Integracje z systemami biznesowymi</li>
                         </ul>
                     </div>
                 </div>
                 <div class="pricing pricing--yellow">
                     <div class="box-main" data-img="img/pricing4.jpg">
                         <h4 class="white">Doradztwo i szkolenia</h4>
-                        <p class="white regular light">Doradztwo i szkolenia dla Twojego biznesu</p>
+                        <p class="white regular light">Eksperckie konsultacje technologiczne i specjalistyczne programy szkoleniowe</p>
                         <i class="info-icon icon_question"></i>
                     </div>
                     <div class="box-second">
                         <ul class="white-list text-left">
-                            <li>Doradztwo w wyborze technologii</li>
-                            <li>Analizy techniczne</li>
-                            <li>Szkolenia u Klienta</li>
-                            <li>Szkolenia On-line</li>
+                            <li>Strategiczne doradztwo technologiczne</li>
+                            <li>Kompleksowe analizy techniczne i audyty</li>
+                            <li>Dedykowane szkolenia stacjonarne</li>
+                            <li>Interaktywne szkolenia online</li>
+                            <li>Konsultacje eksperckie</li>
                         </ul>
                     </div>
                 </div>
@@ -279,8 +282,8 @@
     <div class="modal-dialog">
         <div class="modal-content modal-popup">
             <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-            <h3 class="white">Skontaktuj się</h3>
-            <p class="white" id="error-msg">Uzupełnij wszystkie pola i prześlij ponownie ;)</p>
+            <h3 class="white">Skontaktuj się z nami</h3>
+            <p class="white" id="error-msg">Prosimy o uzupełnienie wszystkich pól formularza</p>
             <form action="" class="popup-form">
                 <input type="text" class="form-control form-white" id="form-name" placeholder="Imię i nazwisko" aria-label="Imię i nazwisko">
                 <input type="text" class="form-control form-white" id="form-mail" placeholder="Adres e-mail" aria-label="Adres e-mail">
@@ -288,7 +291,7 @@
                           placeholder="Wiadomość" aria-label="Wiadomość"></textarea>
 
 
-                <button type="submit" class="btn btn-submit">Wyślij wiadomość</button>
+                <button type="submit" class="btn btn-submit">Wyślij zapytanie</button>
             </form>
         </div>
     </div>
@@ -305,14 +308,14 @@
                 </p>
             </div>
             <div class="col-sm-6 text-center-mobile">
-                <h3 class="white">Daj się poznać <span class="open-blink"></span></h3>
-                <p class="white">Prześlij brief i powiedz nam czego potrzebujesz.</p>
+                <h3 class="white">Rozpocznij współpracę <span class="open-blink"></span></h3>
+                <p class="white">Skontaktuj się z nami, aby omówić Twój projekt i potrzeby biznesowe.</p>
 
 
             </div>
             <div class="bottom-footer text-center-mobile">
                 <div class="col-sm-8">
-                    <p>&copy; 2017 Wszystkie prawa zastrzeżone. Powered by <a
+                    <p>&copy; 2025 Wszystkie prawa zastrzeżone. Powered by <a
                             href="https://codeplot.pl/">Code Plot</a></p>
                 </div>
 
