fix: update index.html content and images for branding improvements

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-md-12 text-center">
                         <img src="/img/logo_big.png" alt="Code Plot - Strony www" id="logo" class="">
                         <h3 class="light white">Technologie webowe | Aplikacje mobilne | E-commerce | Ekspertyza IT</h3>
-                        <h1 class="white typed">Transformujemy cyfrową rzeczywistość.</h1>
+                        <h1 class="white typed">Kreujemy cyfrową rzeczywistość.</h1>
                         <span class="typed-cursor">|</span>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
             </div>
             <div class="col-md-6 no-padding pricings text-center">
                 <div class="pricing pricing--green">
-                    <div class="box-main" data-img="img/pricing3.jpg">
+                    <div class="box-main" data-img="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80">
                         <h4 class="white">Aplikacje mobilne</h4>
                         <p class="white regular light">Indywidualnie projektowane aplikacje mobilne dopasowane do strategii biznesowej</p>
                         <i class="info-icon icon_question"></i>
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="pricing pricing--yellow">
-                    <div class="box-main" data-img="img/pricing4.jpg">
+                    <div class="box-main" data-img="https://images.unsplash.com/photo-1524178232363-1fb2b075b655?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80">
                         <h4 class="white">Doradztwo i szkolenia</h4>
                         <p class="white regular light">Eksperckie konsultacje technologiczne i specjalistyczne programy szkoleniowe</p>
                         <i class="info-icon icon_question"></i>
